<resources>
    <!--  앱의 이름.  -->
    <string name="app_name">Hyeonsu_TodoList</string>
    <!--  임시  -->
    <string name="temp">임시</string>
    <!--  MainActivity에서 사용할 텍스트  -->
    <string name="add_todo">캘린더 확인하기 온 !</string>
    <string name="goal_check">목표 달성 체크 온 !</string>
    <string name="care">나 지쳤어 ! 케어하기 온 !</string>
    <string name="scroll">스크롤 해서 오늘 할 일 확인하기</string>
    <string name="look_on">온 보러가기</string>
    <!--  AddTodoActivity에서 사용할 텍스트  -->
    <string name="title">제목</string>
    <string name="hint_title">할 일 제목</string>
    <string name="completion">완료</string>
    <string name="hint_state">상태</string>
    <string name="state_text">미완료</string>
    <string name="modify_text">수정하기</string>
    <!--  GoalCheckActivity에서 사용할 텍스트  -->
    <string name="currnet_situation">오늘 현황 온</string>
    <string name="long_term_goal_status">장기 목표 현황 온</string>
    <string name="long_term_goal">장기 목표 온</string>
    <string name="short_term_goal">단기 목표 온</string>
    <string name="fixed_todo">고정 할일 온</string>
    <!--  CalendarActivity에서 사용할 텍스트  -->
    <string name="goal_attainment">목표 달성도 온</string>
    <string name="short_goal_achievement">단기 목표 달성도</string>
    <string name="long_goal_achievement">장기 목표 달성도</string>
    <string name="calendar">캘린더 온</string>
    <string name="today_todo">오늘 할 일 온</string>
    <string name="goals_summary">목표 한눈에 온</string>
    <!--  LookOnActivity에서 사용할 텍스트  -->
    <string name="room">room</string>
    <!--  CareOnActivity에서 사용할 텍스트  -->
    <string name="care_on">케어하기 온</string>
    <string name="relax">마음을 편안하게</string>
    <string name="all">전체</string>
    <string name="piano">피아노</string>
    <string name="hypnosis">최면</string>
    <string name="string1">나를 위한 최면</string>
    <string name="string2">몸, 마음 돌보기</string>
    <!--  AddLongTermgoalActivity에서 사용할 텍스트  -->
    <string name="emoticon">이모티콘</string>
    <string name="state">상태</string>
    <string name="period">기간</string>
    <string name="measure">단위</string>
    <string name="hint">직접 입력</string>
    <string name="percent">0%</string>
    <string name="set_short_term_goal">단기 목표 설정</string>
    <string name="spinner_title">선택</string>
    <string name="start_date">시작 날짜</string>
    <string name="end_date">종료 날짜</string>
    <!--  OnBagActivity에서 사용할 텍스트  -->
    <string name="character">캐릭터</string>
    <string name="home">집</string>
    <string name="rare">레어</string>
</resources>