<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/float_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBagActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <Button
        android:id="@+id/btn_all"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/btn_style_white"
        android:text="@string/all"
        app:layout_constraintTop_toTopOf="@id/horizontal"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_character"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/btn_style_white"
        android:text="@string/character"
        app:layout_constraintStart_toEndOf="@id/btn_all"
        app:layout_constraintTop_toTopOf="@id/horizontal"/>

    <Button
        android:id="@+id/btn_home"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/btn_style_white"
        android:text="@string/home"
        app:layout_constraintTop_toTopOf="@id/horizontal"
        app:layout_constraintStart_toEndOf="@id/btn_character"/>

    <Button
        android:id="@+id/btn_rare"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/btn_style_white"
        android:text="@string/rare"
        app:layout_constraintTop_toTopOf="@id/horizontal"
        app:layout_constraintStart_toEndOf="@id/btn_home"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_all"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>