<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".CareOnActivity">

    <ImageView
        android:id="@+id/heart_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/heart_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="38dp"
        android:layout_height="29dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/back_icon2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/heart_icon"/>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="145dp"
        android:layout_height="15dp"
        android:layout_marginTop="30dp"
        android:background="@color/mint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heart_icon"/>
    
    <TextView
        android:id="@+id/care_on"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:text="@string/care_on"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/frame"
        app:layout_constraintEnd_toEndOf="@id/frame"
        app:layout_constraintBottom_toBottomOf="@id/frame"/>
    
    <TextView
        android:id="@+id/relax"
        android:layout_width="100dp"
        android:layout_height="17dp"
        android:text="@string/relax"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/frame"
        app:layout_constraintStart_toStartOf="@id/frame"
        app:layout_constraintEnd_toEndOf="@id/frame"/>
    
    <Button
        android:id="@+id/btn_all"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/btn_style_white"
        android:text="@string/all"
        app:layout_constraintTop_toBottomOf="@id/relax"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_piano"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/btn_style_white"
        android:text="@string/piano"
        app:layout_constraintTop_toTopOf="@id/btn_all"
        app:layout_constraintStart_toEndOf="@id/btn_all"/>

    <Button
        android:id="@+id/btn_hypnosis"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/btn_style_white"
        android:text="@string/hypnosis"
        app:layout_constraintTop_toTopOf="@id/btn_all"
        app:layout_constraintStart_toEndOf="@id/btn_piano"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/btn_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_all"
        app:layout_constraintBottom_toBottomOf="parent">


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>