<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".AddLongTermGoalActivity">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_layout"
        android:layout_margin="15dp"/>
    
    <ImageView
        android:id="@+id/check_icon"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/check_icon"
        app:layout_constraintTop_toTopOf="@id/frame"
        app:layout_constraintStart_toStartOf="@id/frame"
        app:layout_constraintEnd_toEndOf="@id/frame"/>

    <LinearLayout
        android:id="@+id/edt_todo_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/frame"
        app:layout_constraintEnd_toEndOf="@id/frame"
        app:layout_constraintTop_toBottomOf="@id/check_icon">

        <TextView
            android:id="@+id/todo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_title"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edt_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint"
            android:background="@android:color/transparent"
            android:textSize="14sp"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edt_emoticon_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/edt_todo_layout"
        app:layout_constraintEnd_toEndOf="@id/edt_todo_layout"
        app:layout_constraintTop_toBottomOf="@id/edt_todo_layout">

        <TextView
            android:id="@+id/emoticon_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emoticon"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edt_emoticon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:hint="@string/hint"
            android:background="@android:color/transparent"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        android:id="@+id/horizontal_line1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edt_emoticon_layout"
        app:layout_constraintStart_toStartOf="@id/edt_emoticon_layout"
        app:layout_constraintEnd_toEndOf="@id/edt_emoticon_layout"/>

    <TextView
        android:id="@+id/state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/edt_emoticon_layout"
        app:layout_constraintEnd_toEndOf="@id/edt_emoticon_layout"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line1"/>

    <TextView
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/state"
        app:layout_constraintBottom_toBottomOf="@id/state"
        app:layout_constraintEnd_toEndOf="@id/state"/>

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/progress_bar_rounded"
        app:layout_constraintStart_toStartOf="@id/edt_emoticon_layout"
        app:layout_constraintEnd_toEndOf="@id/edt_emoticon_layout"
        app:layout_constraintTop_toBottomOf="@id/state"/>

    <View
        android:id="@+id/horizontal_line2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/seek_bar"
        app:layout_constraintStart_toStartOf="@id/edt_emoticon_layout"
        app:layout_constraintEnd_toEndOf="@id/edt_emoticon_layout"/>

    <TextView
        android:id="@+id/period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/period"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/edt_emoticon_layout"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line2"/>

    <Spinner
        android:id="@+id/period_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/period"
        app:layout_constraintBottom_toBottomOf="@id/period"
        app:layout_constraintEnd_toEndOf="@id/frame"/>


    <TextView
        android:id="@+id/measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/measure"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/edt_emoticon_layout"
        app:layout_constraintTop_toBottomOf="@id/period"/>

    <Spinner
        android:id="@+id/measure_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/measure"
        app:layout_constraintBottom_toBottomOf="@id/measure"
        app:layout_constraintEnd_toEndOf="@id/period_spinner"/>

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/completion"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:background="@drawable/button_style"
        app:layout_constraintStart_toStartOf="@id/frame"
        app:layout_constraintEnd_toEndOf="@id/frame"
        app:layout_constraintBottom_toBottomOf="@id/frame"/>

    <LinearLayout
        android:id="@+id/start_date_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/measure"
        app:layout_constraintEnd_toEndOf="@id/horizontal_line2"
        app:layout_constraintTop_toBottomOf="@id/measure">

        <TextView
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/start_date"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/measure"
            app:layout_constraintStart_toStartOf="@id/measure"/>

        <TextView
            android:id="@+id/start_date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:text="@string/temp"
            android:textSize="14sp"
            android:gravity="right"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/end_date_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/start_date_layout"
        app:layout_constraintStart_toStartOf="@id/start_date_layout"
        app:layout_constraintEnd_toEndOf="@id/horizontal_line2">

        <TextView
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/end_date"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/start_date_layout"
            app:layout_constraintStart_toStartOf="@id/start_date_layout"/>

        <TextView
            android:id="@+id/end_date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:text="@string/temp"
            android:gravity="right"/>

    </LinearLayout>

    <View
        android:id="@+id/horizontal_line3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/end_date_layout"
        app:layout_constraintStart_toStartOf="@id/edt_emoticon_layout"
        app:layout_constraintEnd_toEndOf="@id/edt_emoticon_layout"/>

    <LinearLayout
        android:id="@+id/short_term_goal_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line3"
        app:layout_constraintStart_toStartOf="@id/end_date_layout"
        app:layout_constraintEnd_toEndOf="@id/horizontal_line3">

        <TextView
            android:id="@+id/set_short_term_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/set_short_term_goal"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/short_term_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:hint="@string/hint"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:gravity="right"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>