<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android=
    "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".AddTodoActivity">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/round_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/pencil_icon"
        android:layout_width="52dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/pencil"
        app:layout_constraintTop_toTopOf="@id/frame"
        app:layout_constraintStart_toStartOf="@id/frame"
        app:layout_constraintEnd_toEndOf="@id/frame"/>

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:text="@string/hint_title"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/frame"
        app:layout_constraintStart_toStartOf="@id/frame"
        app:layout_constraintTop_toBottomOf="@id/pencil_icon" />

    <EditText
        android:id="@+id/edt_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_state"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/edt_title"
        app:layout_constraintEnd_toEndOf="@id/edt_title"
        app:layout_constraintTop_toBottomOf="@id/edt_title"/>

    <TextView
        android:id="@+id/state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/edt_state"
        app:layout_constraintTop_toTopOf="@id/edt_state"
        app:layout_constraintBottom_toBottomOf="@id/edt_state"/>

    <Button
        android:id="@+id/btn_completion"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/completion"
        android:textColor="@color/white"
        android:background="@drawable/button_style"
        app:layout_constraintStart_toStartOf="@id/frame"
        app:layout_constraintBottom_toBottomOf="@id/frame"
        app:layout_constraintEnd_toEndOf="@id/frame"/>

</androidx.constraintlayout.widget.ConstraintLayout>