<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint"
    tools:context=".GoalCheckActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/back_icon2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/pencil"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/pencil"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/current_situation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currnet_situation"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/pencil"
        app:layout_constraintStart_toStartOf="@id/first_frame"/>

    <FrameLayout
        android:id="@+id/first_frame"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_layout"
        app:layout_constraintTop_toBottomOf="@id/current_situation"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="@id/first_frame"
        app:layout_constraintBottom_toBottomOf="@id/first_frame"
        app:layout_constraintStart_toStartOf="@id/first_frame"
        app:layout_constraintEnd_toEndOf="@id/first_frame"/>

    <TextView
        android:id="@+id/long_term_goal_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/long_term_goal_status"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/first_frame"
        app:layout_constraintStart_toStartOf="@id/first_frame"/>

    <FrameLayout
        android:id="@+id/second_frame"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@drawable/round_layout"
        app:layout_constraintTop_toBottomOf="@id/long_term_goal_status"
        app:layout_constraintStart_toStartOf="@id/first_frame"
        app:layout_constraintEnd_toEndOf="@id/first_frame"/>

    <TextView
        android:id="@+id/long_term_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/long_term_goal"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/second_frame"
        app:layout_constraintStart_toStartOf="@id/first_frame"/>

    <FrameLayout
        android:id="@+id/third_frame"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@drawable/round_layout"
        app:layout_constraintStart_toStartOf="@id/first_frame"
        app:layout_constraintEnd_toEndOf="@id/first_frame"
        app:layout_constraintTop_toBottomOf="@id/long_term_goal"/>

    <TextView
        android:id="@+id/short_term_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/short_term_goal"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/third_frame"
        app:layout_constraintStart_toStartOf="@id/first_frame"/>

    <FrameLayout
        android:id="@+id/fourth_frame"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:background="@drawable/round_layout"
        app:layout_constraintTop_toBottomOf="@id/short_term_goal"
        app:layout_constraintStart_toStartOf="@id/first_frame"/>

    <TextView
        android:id="@+id/fixed_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/fixed_todo"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/fourth_frame"
        app:layout_constraintTop_toTopOf="@id/short_term_goal"/>

    <FrameLayout
        android:id="@+id/fifth_frame"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@drawable/round_layout"
        app:layout_constraintStart_toStartOf="@id/fixed_todo"
        app:layout_constraintEnd_toEndOf="@id/third_frame"
        app:layout_constraintTop_toTopOf="@id/fourth_frame"/>

</androidx.constraintlayout.widget.ConstraintLayout>