<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/recyclerView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginBottom="50dp"-->
<!--        android:background="@drawable/main_background"-->
<!--        app:layout_constraintBottom_toTopOf="@id/btn_calendar"-->
<!--        app:layout_constraintTop_toTopOf="parent"/>-->

    <FrameLayout
        android:id="@+id/top_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/main_background"
        app:layout_constraintBottom_toTopOf="@id/btn_calendar"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <FrameLayout
        android:id="@+id/bottom_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_layout_top"
        app:layout_constraintTop_toBottomOf="@id/top_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/frame_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/frame_icon"
        app:layout_constraintTop_toTopOf="@id/bottom_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scroll"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_frame"/>

    <Button
        android:id="@+id/btn_calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/button_style"
        android:drawableEnd="@drawable/button_icon"
        android:paddingRight="15dp"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:text="@string/add_todo"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_goal_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="90dp"
        android:text="@string/goal_check"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:background="@drawable/button_style"
        android:drawableEnd="@drawable/button_icon"
        android:paddingRight="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_care"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/care"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_style"
        android:drawableEnd="@drawable/button_icon"
        android:paddingRight="15dp"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_look_on"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="170dp"
        android:paddingLeft="12dp"
        android:background="@drawable/button_style"
        android:drawableEnd="@drawable/button_icon2"
        android:paddingRight="7dp"
        android:text="@string/look_on"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>